# Tarzan_wc

./: README.md
Controls/: README.md
Gazebo/: README.md  sub.py
Perception/: README.md
Perception/practicecodes/: FASTdetection.py  facedetection.py  imgsub.py
Planning/: README.md
Planning/coursera/Course1/: assgn2.py  assign1.py
Planning/practicecodes/triangulation/: filetriangles.py  plotdata.txt
Planning/practicecodes/udacity/: A_star.py  dp.py  maze.py
ROS/: README.md
ROS/Turtlesim/turtlesim_cleaner/: CMakeLists.txt  package.xml
ROS/Turtlesim/turtlesim_cleaner/launch/: clean_py.launch  robot_cleaner.launch
ROS/Turtlesim/turtlesim_cleaner/src/: clean.py  robot_cleaner.cpp  test.cpp
ROS/cvbridge/: rosimagesubscriber.py  tennis_ball_publisher.py  tennis_ball_subscriber.py
ubuntu/: README.md  opencv16.04.sh  opencv18.04.sh  setup.sh
